--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 cypress.env.json
+cypress/screenshots/1-api-tests.cy.js/Tests API - 6 requêtes demandées (avec connexion mock front + token localStorage) -- GET orders sans connexion → retourne erreur pour données confidentielles -- before each hook (failed).png
+cypress/screenshots/1-api-tests.cy.js/Tests API - 6 requêtes demandées (état actuel  auth mockée en front) -- GET orders avec connexion → récupère la liste des produits du panier (failed).png
+cypress/screenshots/1-api-tests.cy.js/Tests API - 6 requêtes demandées (état actuel  auth mockée en front) -- POST reviews → ajouter un avis (failed).png
+cypress/screenshots/1-api-tests.cy.js/Tests API - 6 requêtes demandées (état actuel  auth mockée en front) -- GET orders avec connexion → récupère la liste des produits du panier (failed).png
