--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ cypress/screenshots/1-api-tests.cy.js/Tests API - 6 requêtes demandées (avec c
 cypress/screenshots/1-api-tests.cy.js/Tests API - 6 requêtes demandées (avec connexion mock front + token localStorage) -- POST reviews → ajouter un avis (failed).png
 cypress/screenshots/1-api-tests.cy.js/Tests API - 6 requêtes demandées (avec connexion mock front + token localStorage) -- POST ordersadd → ajout produit disponible (failed).png
 cypress/screenshots/1-api-tests.cy.js/Tests API - 6 requêtes demandées (avec connexion mock front + token localStorage) -- Vérification du token dans Cypress.env après login (failed).png
+cypress/screenshots/4-functional-critical.cy.js/Tests Fonctionnels Critiques -- 2. Panier (connecté avec les infos ci-dessus) (failed).png
